fixed bug in exacta function

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Betting host",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "tape tests/*.js"
   },
   "repository": {
